--- a/familyGraphs.html
+++ b/familyGraphs.html
@@ -12,7 +12,7 @@
     <nav>
         <div class="menu-icon" id="menuIcon">&#9776;</div>
         <ul id="menu">
-            <li><a href="Main.html">Home</a></li> <!-- Link back to Home -->
+            <li><a href="index.html">Home</a></li> <!-- Link back to Home -->
             <li><a href="familyGraphs.html">Family Tree</a></li> <!-- Link to Blank Page (itself) -->
         </ul>
     </nav>
