--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav>
         <div class="menu-icon" id="menuIcon">&#9776;</div>
         <ul id="menu">
-            <li><a href="#home">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="familyGraphs.html">Family Tree</a></li>
         </ul>
     </nav>
