--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     </div>">
         <img src="poke/safari.png"></div>
         
-        <div class="sub-circle" data-image="poke/porygonZ.png" data-text="
+        <div class="sub-circle" data-image="poke/porygonz.png" data-text="
     <strong>Circuit (Porygon-Z)</strong><br><br>
     <h1>Its programming was modified to enable it to operate in other dimensions. This did not work as planned.<h1><br><br>
     <div class='circle-box'>
@@ -975,7 +975,7 @@ Her skill in battle grew quickly, and after a series of victories, Lucille’s i
         <div><strong>Will-O-Wisp</strong></div>
         <div><strong>Natural Gift</strong></div>
     </div>">
-        <img src="poke/Fast.png"></div>
+        <img src="poke/fast.png"></div>
     </div>
                         
         </div>
